allprojects  {
  apply plugin: 'maven'

  group = 'be.mapariensis'
  version = '0.2-SNAPSHOT'
}

subprojects {
  apply plugin: 'java'
  sourceCompatibility = 1.13
  targetCompatibility = 1.13
  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
  }

  
  repositories {
    mavenLocal()
    
    maven { url "https://repo.maven.apache.org/maven2" }
  }

  
  dependencies {
    testCompile group: 'junit', name: 'junit', version:'4.8.2'
}

  
}
